--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.0",
+    "@opengovsg/design-system-react": "^0.0.12",
+    "inter-ui": "^3.19.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
+    "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
