--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.0",
-    "@opengovsg/design-system-react": "^0.0.12",
+    "@opengovsg/design-system-react": "^0.1.0-alpha.11",
     "inter-ui": "^3.19.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
