--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
           role-to-assume: ${{ secrets.AWS_CI_ROLE_TO_ASSUME }}
       - name: Zip and upload to S3
         run: |
-          zip -r public.zip dist/*
-          aws s3 cp public.zip "$S3_BUCKET_URL/public.zip"
+          zip -r dist.zip dist/*
+          aws s3 cp dist.zip "$S3_BUCKET_URL/dist.zip"
